# refine

./: .gitignore  CHANGELOG.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.pnpm-store/v10/index/01/: 725d2e8f2480c6e2998f793b668a42ab33da25a2f63320289851040c44084e-react-dom@19.2.4.json
.pnpm-store/v10/index/05/: 1ed5bc30951cefaadb10445ac9314ba0c9135a919dbec3c7352ba206fbd425-semver@6.3.1.json
.pnpm-store/v10/index/06/: d8f604e38ef37a375b21f9f5ef0c817b3111055c6ab9143a9118aee6c1d2ea-detect-libc@2.1.2.json
.pnpm-store/v10/index/08/: 271496d5cc39f50402b6dfddd6f790213b1a0cb5131044065e752a8d8e0c9e-@tauri-apps+plugin-opener@2.5.3.json  639f389a968e0daa5bf31beb336c0e6faee6f150f03c577db334f73ebda796-@babel+core@7.29.0.json
.pnpm-store/v10/index/09/: 495be47aa2da865b7197f8554c941f9dd758f3ddb69c38dc45290b36b91d66-@tauri-apps+plugin-clipboard-manager@2.3.2.json  ed06167cc03ae3f27d5e52c635c69f40ae6f019cb83074cdc75a3ee092cc06-@tailwindcss+postcss@4.1.18.json
.pnpm-store/v10/index/0e/: 847b5353fb898870d7aa89e3d7e05d496bcb5b780a95de12b2479d0e382604-@tailwindcss+node@4.1.18.json
.pnpm-store/v10/index/1f/: 23502269ec382ed7f4f30d68221e026e08482417b396b961ab135d59622afe-esbuild@0.27.2.json
scripts/: .env.example  check-updater-signing-key.py  notary-status.sh  release-after-notarization.sh  release-before-notarization.sh  release.sh
src/: App.css  App.tsx  ClipboardWindow.tsx  Onboarding.css  Onboarding.tsx  Settings.css  Settings.tsx  Toast.tsx  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/tauri-plugin-aptabase/: .cargo_vcs_info.json  .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  LICENSE  README.md  package.json
src-tauri/plugins/tauri-plugin-aptabase/src/: client.rs  lib.rs
src-tauri/src/: analytics.rs  clipboard.rs  commands.rs  credentials.rs  flows.rs  history.rs  inference.rs  lib.rs  license.rs  main.rs  model.rs  modes.rs  native_mac.rs  providers.rs  quick_actions.rs  shortcuts.rs  sound.rs  state.rs  tray.rs  window.rs
src/components/: PremiumPopup.tsx
src/config/: license.ts
src/hooks/: useLicense.ts  useUpdater.ts
src/settings/: AboutTab.tsx  ConfigTab.tsx  FlowsTab.tsx  HistoryTab.tsx  HomeTab.tsx  ModelTab.tsx  ModelsLibraryTab.tsx  ModesTab.tsx  QuickActionsTab.tsx
src/spotlight/: ClipboardHistory.tsx  CommandPalette.tsx  FooterBar.tsx  PipelineStrip.tsx  ProcessedBar.tsx  SelectorBar.tsx  types.ts
src/utils/: accent.ts  sound.ts
(+89 files in other folders)
