[package]
name = "refine"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "refine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
window-vibrancy = "0.5"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
sha2 = "0.10"
futures-util = "0.3"
llama-cpp-2 = { version = "0.1", features = ["metal"] }
keyring = { version = "3", features = ["apple-native"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
hmac = "0.12.1"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
hostname = "0.4.2"
tauri-plugin-autostart = "2"
rusqlite = "0.33"
plist = "1.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"
core-graphics = "0.24"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[lints.rust]
unexpected_cfgs = "allow"
